# MusicAnalyzer-Core

./: .gitignore  Android.mk  CMakeLists.txt  README.md  build_android.sh  main.cpp  main.h
platform/: android_jni.cpp  default.cpp
